--- a/views/index.haml
+++ b/views/index.haml
@@ -13,20 +13,23 @@
   var ctx;
   var socket;
   var collected_msg = "";
+  var country_colors = ['#FFFFFF','#FF0000','#FFFF00','#FF00FF','00FFFF'];
 
-  function player(name,character){
+  function player(name,character,color){
+    if (typeof color === 'undefined') { color = 0; }
     this.character = character;
     this.name = name;
-    this.color = "#000000";
+    this.color = country_colors[color];
     this.X = 0;
     this.Y = 0;
     this.setPosition = function(X,Y){
       this.X = X;
       this.Y = Y; 
-      console.log(this);
     };
     this.draw = function(){
-      null;
+      //console.log(this);
+      ctx.fillStyle=this.color;
+      ctx.fillRect(10*this.X,20*this.Y,10,20);
     };
   }
   
@@ -39,40 +42,59 @@
   }
   
   function game(arr) {
-    this.set_player = function(name, character){
-      temp_player = new player(name, character);
+
+    this.set_player = function(name, character, color){
+      temp_player = new player(name, character, color);
       this.players.push(temp_player);
     };
-    this.update_game = function(arr){
-      console.log(arr);
-    };
-    this.draw = function(){
-      this.ball.draw();
-      //TOOD draw all players 
-    };
-    this.players =  [];
-    for (i=1;i <= arr[0];i++){
-      this.set_player(arr[3+(i-1)*4],arr[4+(i-1)*3]);
-    }
-    this.time = 90;
-    this.ball =  new player("ball","O");
-    this.ball.setPosition(50,15);
+
     this.team_1_score = 0;
     this.team_2_score = 0;
     this.team_1_country = arr[1];
     this.team_2_country = arr[2];
+
+    this.players =  [];
+    for (i=1;i <= arr[0];i++){
+      if (i%2 == 0){
+        this.set_player(arr[3+(i-1)*4],arr[4+(i-1)*3],this.team_1_country);
+      } else {
+        this.set_player(arr[3+(i-1)*4],arr[4+(i-1)*3],this.team_2_country);
+      }
+    }
+    this.time = 90;
+    this.ball =  new player("ball","O");
+    this.ball.setPosition(50,15);
+
+
+
+    this.update_game = function(arr){
+      //console.log(arr);
+      this.ball.setPosition(arr[0],arr[1]);
+      for(i=0;i<this.players.length;i++){
+        this.players[i].setPosition(arr[i*2+2],arr[3+i*2]);
+      }
+      //new_event(arr[arr.length]);
+      draw_court();
+      this.draw();
+    };
+
+    this.draw = function(){
+      this.ball.draw();
+      for(i=0;i<this.players.length;i++){
+        this.players[i].draw();
+      }
+    };
+
   }
 
   function do_action(str){
     var tempAction = new action(str);
-    console.log("executing action:");
-    console.log(tempAction.type);
-    console.log("using data:");
-    console.log(tempAction.data);
+    //console.log("executing action:");
+    //console.log(tempAction.type);
     
     switch (tempAction.type)
     {
-      case 'update_gameboard': current_game.update_game();
+      case 'update_gameboard': current_game.update_game(tempAction.data);
         break;
       case 'game_setup': current_game = new game(tempAction.data);
         break;
@@ -87,7 +109,6 @@
     ctx.fillRect(10,20,980,560);
     ctx.fillRect(0,20*12,10,20*6);
     ctx.fillRect(990,20*12,10,20*6);
-    //draw_scale();
   }
 
   function connect(){
