--- a/views/index.haml
+++ b/views/index.haml
@@ -120,7 +120,7 @@
 
   function connect(){
     try{
-      var host = "ws://ec2-23-22-99-38.compute-1.amazonaws.com:8080}}";
+      var host = "ws://ec2-23-22-99-38.compute-1.amazonaws.com:8080";
       var socket = new WebSocket(host);
       socket.onopen = function(){
         // Create input method for the game
