--- a/views/index.haml
+++ b/views/index.haml
@@ -68,12 +68,17 @@
 
 
     this.update_game = function(arr){
-      //console.log(arr);
       this.ball.setPosition(arr[0],arr[1]);
       for(i=0;i<this.players.length;i++){
         this.players[i].setPosition(arr[i*2+2],arr[3+i*2]);
       }
-      //new_event(arr[arr.length]);
+      console.log(arr);
+      if (arr[arr.length] == "1"){
+        game.team_1_score += 1;
+      }
+      if (arr[arr.length] == "2"){
+        game.team_2_score += 1;
+      }
       draw_court();
       this.draw();
     };
@@ -120,7 +125,7 @@
 
   function connect(){
     try{
-      var host = "ws://ec2-23-22-99-38.compute-1.amazonaws.com:8080";
+      var host = "ws://ec2-184-73-165-101.compute-1.amazonaws.com:8080";
       var socket = new WebSocket(host);
       socket.onopen = function(){
         // Create input method for the game
@@ -148,6 +153,14 @@
     socket = connect(); 
     $(window).keydown(function (e) {
       switch(e.keyCode){
+        case 40: socket.send(2);
+        break;
+        case 39: socket.send(6);
+        break;
+        case 38: socket.send(8);
+        break;
+        case 37: socket.send(4);
+        break;
         case 99: socket.send(3);
         break;
         case 98: socket.send(2);
