--- a/views/index.haml
+++ b/views/index.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %script{:type => "text/javascript", :src  => "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
+    %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/styles.css'}
   %body
     #header
     #stage{:style => "width: 1000px; height: 600px; margin-left: auto; margin-right: auto; border:1px solid #000000;"}
