--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -1,4 +1,7 @@
-$blue: #3bbfce
-
+$color-light:  #3bbfce
+$color-dark:   #3bbfce
+$color-accent: #3bbfce
+$color-text:   #3bbfce
+  
 body 
-  background-color: $blue
+  background-color: $color-light
