Port is now sent trough to client

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -1,7 +1,11 @@
 $color-light:  #3bbfce
-$color-dark:   #3bbfce
-$color-accent: #3bbfce
-$color-text:   #3bbfce
+$color-dark:   #1b9fae
+$color-accent: #bf3bce
+$color-text:   #ffffff
   
 body 
   background-color: $color-light
+  text-color: $color-text
+
+#gameConfig
+  display: none
