--- a/views/index.haml
+++ b/views/index.haml
@@ -4,6 +4,8 @@
     %script{:type => "text/javascript", :src  => "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
     %script{:type => "text/javascript", :src  => "/js/game.js"}
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/styles.css'}
+    #gameConfig
+      #port=@port
   %body
     #header
     #stage{:style => "width: 1000px; height: 600px; margin-left: auto; margin-right: auto; border:1px solid #000000;"}
