--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -1,11 +1,33 @@
-$color-light:  #3bbfce
+$color-light:  #3b9f3b
 $color-dark:   #1b9fae
-$color-accent: #bf3bce
+$color-accent: #3b3bbf
 $color-text:   #ffffff
   
 body 
   background-color: $color-light
-  text-color: $color-text
+  color: $color-text
+  font-family: 'Press Start 2P', cursive
+
+.accent-text
+  color: $color-accent
+
+#stage
+  background-color: #000
+  width: 1000px
+  height: 600px
+  margin-left: auto
+  margin-right: auto
+  border: 3px ridge #333
+
+#score
+  padding-top: 20px
+  padding-bottom: 20px
+  background-color: #000
+  width: 500px
+  margin-left: auto
+  margin-right: auto
+  border: 3px ridge #333
+  border-top-width: 0px
 
 #gameConfig
   display: none
