--- a/views/index.haml
+++ b/views/index.haml
@@ -4,10 +4,20 @@
     %script{:type => "text/javascript", :src  => "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
     %script{:type => "text/javascript", :src  => "/js/game.js"}
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/styles.css'}
+    %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
     #gameConfig
       #port=@port
+      -if ENV['RACK_ENV'] == "development"
+        #host ws://pablo-N53SN:8080/
   %body
     #header
-    #stage{:style => "width: 1000px; height: 600px; margin-left: auto; margin-right: auto; border:1px solid #000000;"}
+    #stage
       %canvas{:id => "canvas", :width => 1000, :height => 600} 
+    #score
+      %center
+        %span.accent-text Team 1
+        %span#team1 0
+        %span -
+        %span#team2 0
+        %span.accent-text Team 2
     #footer
