--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -17,7 +17,7 @@ body
   height: 600px
   margin-left: auto
   margin-right: auto
-  border: 3px ridge #333
+  border: 3px solid #FFF
 
 #score
   padding-top: 20px
@@ -26,8 +26,18 @@ body
   width: 500px
   margin-left: auto
   margin-right: auto
-  border: 3px ridge #333
+  border: 3px solid #FFF
   border-top-width: 0px
 
 #gameConfig
   display: none
+
+#timebox
+  padding-top: 20px
+  padding-bottom: 20px
+  background-color: #000
+  width: 300px
+  margin-left: auto
+  margin-right: auto
+  border: 3px solid #FFF
+  border-bottom-width: 0px
