Datamapper models have been created

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -1,6 +1,6 @@
 $color-light:  #3b9f3b
 $color-dark:   #1b9fae
-$color-accent: #3b3bbf
+$color-accent: #D3D32b
 $color-text:   #ffffff
   
 body 
@@ -9,6 +9,42 @@ body
   font-family: 'Press Start 2P', cursive
 
 .accent-text
+  color: $color-accent
+
+#signup
+  width: 300px
+  padding: 20px
+  margin-top: 50px
+  margin-left: auto
+  margin-right: auto
+  text-align: center
+  border: 5px solid #FFF
+  -moz-box-shadow: 8px 7px #354535
+  -webkit-box-shadow: 7px 7px #354535
+  box-shadow: 7px 7px #354535
+
+label
+  text-shadow: #000 0.1em 0.1em 0.1em
+  color: #FFF
+  padding: 0.5em
+  padding-top: 1em
+  display: block
+
+button
+  padding: 20px
+  font-family: 'Press Start 2P', cursive
+  font-size: 1.5em
+  color: #FFF
+  background-color: $color-light
+  border: 0px solid #000
+  display: block
+  margin-left: auto
+  margin-right: auto
+  text-align: center
+  cursor: pointer
+  text-shadow: #000 0.1em 0.1em 0.1em
+
+button:hover
   color: $color-accent
 
 #stage
@@ -41,3 +77,17 @@ body
   margin-right: auto
   border: 3px solid #FFF
   border-bottom-width: 0px
+
+input, input:active
+  border: 3px solid #FFF
+  width: 250px
+  height: 20px
+  color: #FFF
+  background-color: $color-light
+  font-size: 0.7em
+  font-family: 'Press Start 2P', cursive
+  outline: none
+
+input:focus
+  outline: none
+  border-color: $color-accent
