--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,7 @@
-%h1 Pablo Karlsson
+#signup
+  %form{:method => "post", :action => "/signup"}
+    %label Email
+    %input{:name => "email"}
+    %label Password
+    %input{:type => 'password', :name => "password"}
+    %button.center Signup
