--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,11 +1,9 @@
 !!!
 %html
   %head
-    %script{:type => "text/javascript", :src  => "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
-    %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/styles.css'}
-    %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
+    =haml :head_portal
   %body
-    #head
+    #header
     #content 
       =yield
-    #foot 
+    #footer
