--- a/views/game.haml
+++ b/views/game.haml
@@ -17,3 +17,15 @@
         %span -
         %span#team2 0
         %span.accent-text Team 2
+    #onscreenkeyboard
+      %button
+      %button
+      %button
+      
+      %button
+      %button
+      %button
+
+      %button
+      %button
+      %button
