--- a/assets/css/gameboard.sass
+++ b/assets/css/gameboard.sass
@@ -1,9 +1,4 @@
-$color-white:  #ffffff
-$color-light:  #3b9f3b
-$color-dark:   #1b9fae
-$color-shadow: #354535
-$color-accent: #D3D32b
-$color-text:   #ffffff
+@import "color"  
   
 body 
   background-color: $color-light
@@ -40,3 +35,29 @@ body
   margin-right: auto
   border: 3px solid $color-white
   border-bottom-width: 0px
+
+#onscreenkeyboard
+  background-color: #000
+  width: 300px
+  height: 300px
+  margin-left: auto
+  margin-right: auto
+  border: 3px solid $color-white
+  border-top-width: 0px
+
+#onscreenkeyboard button
+  display: inline-block
+  width: 90px
+  height: 90px
+  border: 0
+  margin: 0
+  padding: 2px
+
+@media only screen and (-webkit-device-pixel-ratio:1.5)
+  #onscreenkeyboard
+
+@media only screen and (-webkit-device-pixel-ratio:.75)
+  #onscreenkeyboard
+
+@media only screen and (-webkit-device-pixel-ratio:1)
+  #onscreenkeyboard
