--- a/views/head_portal.haml
+++ b/views/head_portal.haml
@@ -1,3 +1,4 @@
 %script{:type => "text/javascript", :src  => "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
+%link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/grid.css'}
 %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/styles.css'}
 %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
