--- a/views/game.haml
+++ b/views/game.haml
@@ -18,14 +18,12 @@
         %span#team2 0
         %span.accent-text Team 2
     #onscreenkeyboard
-      %button
-      %button
-      %button
-      
-      %button
-      %button
-      %button
-
-      %button
-      %button
-      %button
+      %button#upleft
+      %button#up
+      %button#upright
+      %button#left
+      %button.hidden
+      %button#right
+      %button#downleft
+      %button#down
+      %button#downright
