mobil keys are now hidden normal display

--- a/assets/css/gameboard.sass
+++ b/assets/css/gameboard.sass
@@ -36,47 +36,135 @@ body
   border: 3px solid $color-white
   border-bottom-width: 0px
 
-#onscreenkeyboard
-  background-color: $color-light
-  width: 640px
-  padding: 0px
-  margin-left: auto
-  margin-right: auto
-  margin-bottom: 2em
-  margin-top: 2em
-
-#onscreenkeyboard button
-  display: inline-block
-  width: 180px
-  height: 180px
-  border: 0px
-  margin: 0px
-  margin-left: 10px
-  margin-bottom: 20px
-  border-radius: 4px
-  font-family: 'Press Start 2P', cursive
-  font-size: 1.5em
-  color: $color-white
-  background-color: $color-gray
-  border: 0px solid $color-black
-  display: inline-block
-  text-align: center
-  cursor: pointer
-  -moz-box-shadow: 3px 3px $color-black
-  -webkit-box-shadow: 3px 3px $color-black
-  box-shadow: 3px 3px $color-black
-
-#onscreenkeyboard button:active
-  background-color: $color-accent
+  #onscreenkeyboard
+    display: none
 
 @media only screen and (-webkit-device-pixel-ratio:1.5)
   #onscreenkeyboard
+    background-color: $color-light
+    width: 640px
+    padding: 0px
+    margin-left: auto
+    margin-right: auto
+    margin-bottom: 2em
+    margin-top: 2em
+
+  #onscreenkeyboard button
+    display: inline-block
+    width: 180px
+    height: 180px
+    border: 0px
+    margin: 0px
+    margin-left: 10px
+    margin-bottom: 20px
+    border-radius: 4px
+    font-family: 'Press Start 2P', cursive
+    font-size: 1.5em
+    color: $color-white
+    background-color: $color-gray
+    border: 0px solid $color-black
+    display: inline-block
+    text-align: center
+    cursor: pointer
+    -moz-box-shadow: 3px 3px $color-black
+    -webkit-box-shadow: 3px 3px $color-black
+    box-shadow: 3px 3px $color-black
+  
+  #onscreenkeyboard button:active
+    background-color: $color-accent
 
 @media only screen and (-webkit-device-pixel-ratio:.75)
   #onscreenkeyboard
+    background-color: $color-light
+    width: 640px
+    padding: 0px
+    margin-left: auto
+    margin-right: auto
+    margin-bottom: 2em
+    margin-top: 2em
+
+  #onscreenkeyboard button
+    display: inline-block
+    width: 180px
+    height: 180px
+    border: 0px
+    margin: 0px
+    margin-left: 10px
+    margin-bottom: 20px
+    border-radius: 4px
+    font-family: 'Press Start 2P', cursive
+    font-size: 1.5em
+    color: $color-white
+    background-color: $color-gray
+    border: 0px solid $color-black
+    display: inline-block
+    text-align: center
+    cursor: pointer
+    -moz-box-shadow: 3px 3px $color-black
+    -webkit-box-shadow: 3px 3px $color-black
+    box-shadow: 3px 3px $color-black
+  
+  #onscreenkeyboard button:active
+    background-color: $color-accent
 
 @media only screen and (-webkit-device-pixel-ratio:1)
   #onscreenkeyboard
+    background-color: $color-light
+    width: 640px
+    padding: 0px
+    margin-left: auto
+    margin-right: auto
+    margin-bottom: 2em
+    margin-top: 2em
+
+  #onscreenkeyboard button
+    display: inline-block
+    width: 180px
+    height: 180px
+    border: 0px
+    margin: 0px
+    margin-left: 10px
+    margin-bottom: 20px
+    border-radius: 4px
+    font-family: 'Press Start 2P', cursive
+    font-size: 1.5em
+    color: $color-white
+    background-color: $color-gray
+    border: 0px solid $color-black
+    display: inline-block
+    text-align: center
+    cursor: pointer
+    -moz-box-shadow: 3px 3px $color-black
+    -webkit-box-shadow: 3px 3px $color-black
+    box-shadow: 3px 3px $color-black
+  
+  #onscreenkeyboard button:active
+    background-color: $color-accent
+
+@media only screen and (-webkit-device-pixel-ratio:.75)
+  #onscreenkeyboard button
+    display: inline-block
+    width: 180px
+    height: 180px
+    border: 0px
+    margin: 0px
+    margin-left: 10px
+    margin-bottom: 20px
+    border-radius: 4px
+    font-family: 'Press Start 2P', cursive
+    font-size: 1.5em
+    color: $color-white
+    background-color: $color-gray
+    border: 0px solid $color-black
+    display: inline-block
+    text-align: center
+    cursor: pointer
+    -moz-box-shadow: 3px 3px $color-black
+    -webkit-box-shadow: 3px 3px $color-black
+    box-shadow: 3px 3px $color-black
+  
+  #onscreenkeyboard button:active
+    background-color: $color-accent
 
 .hidden
   visibility: hidden
