--- a/assets/css/gameboard.sass
+++ b/assets/css/gameboard.sass
@@ -41,6 +41,7 @@ body
 
 @media only screen and (-webkit-device-pixel-ratio:1.5)
   #onscreenkeyboard
+    display: block
     background-color: $color-light
     width: 640px
     padding: 0px
@@ -75,6 +76,7 @@ body
 
 @media only screen and (-webkit-device-pixel-ratio:.75)
   #onscreenkeyboard
+    display: block
     background-color: $color-light
     width: 640px
     padding: 0px
@@ -109,6 +111,7 @@ body
 
 @media only screen and (-webkit-device-pixel-ratio:1)
   #onscreenkeyboard
+    display: block
     background-color: $color-light
     width: 640px
     padding: 0px
@@ -117,31 +120,6 @@ body
     margin-bottom: 2em
     margin-top: 2em
 
-  #onscreenkeyboard button
-    display: inline-block
-    width: 180px
-    height: 180px
-    border: 0px
-    margin: 0px
-    margin-left: 10px
-    margin-bottom: 20px
-    border-radius: 4px
-    font-family: 'Press Start 2P', cursive
-    font-size: 1.5em
-    color: $color-white
-    background-color: $color-gray
-    border: 0px solid $color-black
-    display: inline-block
-    text-align: center
-    cursor: pointer
-    -moz-box-shadow: 3px 3px $color-black
-    -webkit-box-shadow: 3px 3px $color-black
-    box-shadow: 3px 3px $color-black
-  
-  #onscreenkeyboard button:active
-    background-color: $color-accent
-
-@media only screen and (-webkit-device-pixel-ratio:.75)
   #onscreenkeyboard button
     display: inline-block
     width: 180px
