--- a/views/head_gameboard.haml
+++ b/views/head_gameboard.haml
@@ -2,7 +2,10 @@
 %script{:type => "text/javascript", :src  => "/js/game.js"}
 %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/gameboard.css'}
 %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
-%meta{:content => "target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no", :name => "viewport"}/
+%meta{:content => "width=device-width, initial-scale=0.8, user-scalable=no, target-densitydpi=high-dpi", :name => "viewport"}/
+%meta{:content => "width=device-width, initial-scale=0.6, user-scalable=no, target-densitydpi=medium-dpi", :name => "viewport"}/
+%meta{:content => "width=device-width, initial-scale=0.4, user-scalable=no, target-densitydpi=low-dpi", :name => "viewport"}/
+
 #gameConfig
   #port=@port
   -if ENV['RACK_ENV'] == "development"
