--- a/views/head_portal.haml
+++ b/views/head_portal.haml
@@ -1,4 +1,10 @@
 %script{:type => "text/javascript", :src  => "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
+%script{:type => "text/javascript", :src  => "/js/message.js"}
 %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/grid.css'}
 %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/styles.css'}
 %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
+-if @message
+  :javascript
+    $(document).ready(function(){
+      $('#cover-all').show();
+    });
