--- a/views/login.haml
+++ b/views/login.haml
@@ -1,10 +1,11 @@
 .heading
-  %h2 Join/Logon
-%form#loginform{:method => "post"}
+  %h2=@text
+%form{:id => "#{@type}form",:method => "post"}
   %label Email: 
   %input{:name => "email"}
   %label Password: 
   %input{:type => "password", :name => "signature"}
     %div
-      %button{:type => "button",:onclick => "submitForm('#loginform','/log/on');"} Logon
-      %button{:type => "button",:onclick => "submitForm('#loginform','/recover');"} Recover
+      %button.button{:type => "button",:onclick => "submitForm('##{@type}form','#{@submit}');"}=@text
+      -if @login
+        %button.button{:type => "button",:onclick => "submitForm('##{@type}form','/recover');"} Recover
