--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -171,5 +171,19 @@ input:focus
   z-index: 9999
   display: none
 
+.error
+  line-height: 1.25em
+  margin-top: 10px
+  border-radius: 4px
+  padding: 10px
+  margin-left: auto
+  margin-right: auto
+  width: 90%
+  background-color: #CC0000
+  -moz-box-shadow: -7px 7px $color-shadow
+  -webkit-box-shadow: -7px 7px $color-shadow
+  box-shadow: -7px 7px $color-shadow
+  text-shadow: $color-black 0.1em 0.1em 0.1em
+
 .message
   margin-top: 200px
