--- a/views/login.haml
+++ b/views/login.haml
@@ -4,7 +4,7 @@
   %label Email: 
   %input{:name => "email"}
   %label Password: 
-  %input{:type => "password", :name => "signature"}
+  %input{:type => "password", :name => "password"}
     %div
       %button.button{:type => "button",:onclick => "submitForm('##{@type}form','#{@submit}');"}=@text
       -if @login
