added settings and helpers

--- a/assets/css/color.sass
+++ b/assets/css/color.sass
@@ -1,8 +1,19 @@
-$color-white:  #ffffff
-$color-gray:   #333333
-$color-black:  #000000
-$color-light:  #3b9f3b
-$color-dark:   #1b9fae
-$color-shadow: #354535
-$color-accent: #D3D32b
-$color-text:   #ffffff
+$white      :    #ffffff
+$gray       :    #333333
+$black      :    #000000
+$light      :    #3b9f3b
+$shadow     :    #354535
+$accent     :    #D3D32b
+$accent2    :    #CC0000
+$color1     :    #4D387B
+$color2     :    #B20000
+$color3     :    #6AC0BD
+$color4     :    #FE374A
+$color5     :    #FC7736
+$color6     :    #EDC218
+$color7     :    #2ADE75
+$color8     :    #F77EC3
+$foreground :    #2BBF2B  
+$background :    #2BAF2B
+$active     :    #454577
+$inactive   :    #999999
