--- a/assets/css/gameboard.sass
+++ b/assets/css/gameboard.sass
@@ -1,26 +1,26 @@
 @import "color"  
   
 body 
-  background-color: $color-light
-  color: $color-text
+  background-color: $light
+  color: $white
   font-family: 'Press Start 2P', cursive
 
 #stage
-  background-color: #000
+  background-color: $black
   width: 1000px
   height: 600px
   margin-left: auto
   margin-right: auto
-  border: 3px solid $color-white
+  border: 3px solid $white
 
 #score
   padding-top: 20px
   padding-bottom: 20px
-  background-color: #000
+  background-color: $black
   width: 500px
   margin-left: auto
   margin-right: auto
-  border: 3px solid $color-white
+  border: 3px solid $white
   border-top-width: 0px
 
 #gameConfig
@@ -33,46 +33,8 @@ body
   width: 300px
   margin-left: auto
   margin-right: auto
-  border: 3px solid $color-white
+  border: 3px solid $white
   border-bottom-width: 0px
-
-#onscreenkeyboard
-  display: none
-
-@media only screen and (-webkit-device-pixel-ratio:2) and (max-device-width : 721px) and (orientation: portrait)
-  #onscreenkeyboard
-    display: block
-    background-color: $color-light
-    width: 640px
-    padding: 0px
-    margin-left: auto
-    margin-right: auto
-    margin-bottom: 2em
-    margin-top: 2em
-
-  #onscreenkeyboard button
-    display: inline-block
-    width: 180px
-    height: 180px
-    border: 0px
-    margin: 0px
-    margin-left: 10px
-    margin-bottom: 20px
-    border-radius: 4px
-    font-family: 'Press Start 2P', cursive
-    font-size: 1.5em
-    color: $color-white
-    background-color: $color-gray
-    border: 0px solid $color-black
-    display: inline-block
-    text-align: center
-    cursor: pointer
-    -moz-box-shadow: 3px 3px $color-black
-    -webkit-box-shadow: 3px 3px $color-black
-    box-shadow: 3px 3px $color-black
-  
-  #onscreenkeyboard button:active
-    background-color: $color-accent
 
 .hidden
   visibility: hidden
