--- a/views/head_gameboard.haml
+++ b/views/head_gameboard.haml
@@ -4,5 +4,5 @@
 %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
 #gameConfig
   #port=@port
-  -if ENV['RACK_ENV'] == "development"
-    #host ws://pablo-N53SN:8080/
+  -$config.each do |key,value|
+    %div{:id => key}=value
